--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,8 +47,7 @@
                 android:layout_height="100dp"
                 android:background="@drawable/button"
                 android:text="C"
-                android:textSize="30dp"
-                />
+                android:textSize="30dp" />
 
             <Button
                 android:id="@+id/btn_back"
