--- a/app/src/main/res/layout/science_calculater.xml
+++ b/app/src/main/res/layout/science_calculater.xml
@@ -7,4 +7,302 @@
     android:orientation="vertical"
     tools:context="scienceActivity">
 
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="210dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/et"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+            android:gravity="right|bottom"
+            android:text="" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="411dp"
+        android:layout_height="500dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp">
+            <Button
+                android:id="@+id/btn_1-X_add"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="x!"
+                android:textSize="30dp" />
+            <Button
+                android:id="@+id/btn_leftBrackets"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="("
+                android:textSize="30dp" />
+            <Button
+                android:id="@+id/btn_rightBrackets"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text=")"
+                android:textSize="30dp" />
+            <Button
+                android:id="@+id/btn_1divX"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="1/x"
+                android:textSize="30dp" />
+            <Button
+                android:id="@+id/btn_"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="="
+                android:textSize="30dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp">
+
+            <Button
+                android:id="@+id/btn_sin"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="sin"
+                android:textSize="25dp" />
+
+            <Button
+                android:id="@+id/btn_c"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="C"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_back"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="back"
+                android:textSize="25dp" />
+
+            <Button
+                android:id="@+id/btn_add"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="+"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_div"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="/"
+                android:textSize="30dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_cos"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="cos"
+                android:textSize="25dp" />
+            <Button
+                android:id="@+id/btn_1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="1"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="2"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_3"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="3"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_mul"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="*"
+                android:textSize="30dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_tan"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="tan"
+                android:textSize="25dp" />
+            <Button
+                android:id="@+id/btn_4"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="4"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_5"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="5"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_6"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="6"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_mis"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="-"
+                android:textSize="30dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_sqrt"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="√"
+                android:textSize="25dp" />
+
+            <Button
+                android:id="@+id/btn_7"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="7"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_8"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="8"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_9"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="9"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_mod"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="%"
+                android:textSize="30dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_pow"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="pow"
+                android:textSize="25dp" />
+
+            <Button
+                android:id="@+id/btn_less"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="Less"
+                android:textSize="25dp" />
+
+            <Button
+                android:id="@+id/btn_0"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="0"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_point"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/button"
+                android:text="."
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/btn_equ"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/btn_equ"
+                android:text="="
+                android:textSize="30dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
