--- a/app/src/main/res/layout/science_calculater.xml
+++ b/app/src/main/res/layout/science_calculater.xml
@@ -46,7 +46,7 @@
                 android:layout_height="80dp"
                 android:background="@drawable/button"
                 android:text="x!"
-                android:textSize="30dp" />
+                android:textSize="25dp" />
             <Button
                 android:id="@+id/btn_leftBrackets"
                 android:layout_width="80dp"
@@ -67,7 +67,7 @@
                 android:layout_height="80dp"
                 android:background="@drawable/button"
                 android:text="1/x"
-                android:textSize="30dp" />
+                android:textSize="25dp" />
             <Button
                 android:id="@+id/btn_"
                 android:layout_width="80dp"
@@ -276,7 +276,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:background="@drawable/button"
-                android:text="Less"
+                android:text="less"
                 android:textSize="25dp" />
 
             <Button
