--- a/app/src/main/res/layout/science_calculater.xml
+++ b/app/src/main/res/layout/science_calculater.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="80dp">
             <Button
-                android:id="@+id/btn_1-X_add"
+                android:id="@+id/btn_1_X_add"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:background="@drawable/button"
@@ -68,6 +68,7 @@
                 android:background="@drawable/button"
                 android:text="1/x"
                 android:textSize="25dp" />
+
             <Button
                 android:id="@+id/btn_"
                 android:layout_width="80dp"
